welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:2: error: reassignment to val
	if ( a=10 || b = 10){
              ^makes10:3: error: type mismatch;
 found   : Int(10)
 required: Boolean
		return 10;
                       ^makes10:5: error: Int does not take parameters
		return ( a + b) {
                                ^